fix: ajustando tabelas